--- a/frontend/catalog.html
+++ b/frontend/catalog.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="font-awesome/fontawesome-free-5.13.0-web/css/all.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <script src="./inventory/products.js"></script>
+    <script src="js/jquery-3.5.0.min.js"></script>
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.668.0.min.js"></script>
     <script src="js/aws-cognito-sdk.min.js"></script>
     <script src="js/amazon-cognito-identity.min.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
-    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.668.0.min.js"></script>
     <script src="inventory/products.js"></script>
     <script type="text/javascript" src="js/catalog.js"></script>
 </head>
