--- a/frontend/verify.html
+++ b/frontend/verify.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>The Jukebox | My Cart</title>
+    <title>The Jukebox | Verify</title>
     <link rel="icon" type="image/png" href="./favico.ico">
     <link rel="stylesheet" href="font-awesome/fontawesome-free-5.13.0-web/css/all.css">
     <link rel="stylesheet" href="css/main.css">
