--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="font-awesome/fontawesome-free-5.13.0-web/css/all.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <script src="./inventory/products.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery-3.5.0.min.js"></script>
+    <script src="./inventory/products.js"></script>    
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.668.0.min.js"></script>
     <script src="js/aws-cognito-sdk.min.js"></script>
     <script src="js/amazon-cognito-identity.min.js"></script>
@@ -34,10 +34,10 @@
             </div>
             <div class="col-4 menu-col">
                 <nav class="navbar navbar-expand-sm justify-content-end">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-                        <span class="navbar-toggler-icon"></span>
+                    <button type="button" class="btn-transparent navbar-toggle" data-toggle="collapse" data-target="#navbarSupportedContent2">
+                        <span><i class="fas fa-bars"></i></span>                  
                     </button>
-                    <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent2">
                         <ul class="navbar-nav text-right">
                             <li class="nav-item">
                                 <a class="nav-link text-light" href="./index.html">HOME</a>
@@ -49,7 +49,7 @@
                                 <a class="nav-link text-light" href="./cart.html">MY CART </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-warning" id="loginBtn" href="./login.html" data-toggle="modal" data-target="#loginModal">Login <i class="fas fa-sign-in-alt"></i></a>
+                                <a class="nav-link text-warning" id="loginBtn" href="./login.html">Login <i class="fas fa-sign-in-alt"></i></a>
                             </li>
                         </ul>
                     </div>
