--- a/frontend/verify.html
+++ b/frontend/verify.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="font-awesome/fontawesome-free-5.13.0-web/css/all.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="js/aws-cognito-sdk.min.js"></script>
     <script src="js/amazon-cognito-identity.min.js"></script>
@@ -31,10 +32,10 @@
             </div>
             <div class="col-4 menu-col">
                 <nav class="navbar navbar-expand-sm justify-content-end">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-                        <span class="navbar-toggler-icon"></span>
+                    <button type="button" class="btn-transparent navbar-toggle" data-toggle="collapse" data-target="#navbarSupportedContent">
+                        <span><i class="fas fa-bars"></i></span>                  
                     </button>
-                    <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav text-right">
                             <li class="nav-item">
                                 <a class="nav-link" href="./index.html">HOME</a>
